# pidcat_rust

./: .gitignore  Cargo.toml  Makefile.toml  README.md  changelog_config.json  makefile.toml
.github/workflows/: build_installer.yml  publish_release_on_tag.yml
src/: lib.rs
src/controller/: writer.rs
src/model/: adb_device.rs  adb_state.rs  ansi_segment.rs  cli_args.rs  log_level.rs  log_source.rs  mod.rs  option_unwrap.rs  result_unwrap.rs  state.rs  value_unwrap.rs
