[package]
name = "pidcat"
edition = "2024"
version = "0.1.0"
build = "build.rs"

[dependencies]
ctrlc = "3.5.1"
regex = "1.12.2"
colored = "3.0.0"
once_cell = "1.21.3"
terminal_size = "0.4.3"
clap = { version = "4.5.54", features = ["derive"] }
strip-ansi-escapes = "0.2.1"

[build-dependencies]
embed-resource = "3.0.6"

[[bin]]
name = "PidCat"
path = "src/bin/main.rs"
