[package]
name = "pidcat"
edition = "2024"
version = "1.1.0"
build = "build/build.rs"
description = "A colorized Android logcat viewer with advanced filtering capabilities."
authors = ["AbdElMoniem ElHifnawy"]

[dependencies]
ctrlc = "3.5.1"
regex = "1.12.2"
colored = "3.0.0"
itertools = "0.14.0"
once_cell = "1.21.3"
is-terminal = "0.4.17"
terminal_size = "0.4.3"
strip-ansi-escapes = "0.2.1"
clap = { version = "4.5.54", features = ["derive"] }

[build-dependencies]
build-print = "1.0.1"
embed-resource = "3.0.6"

[[bin]]
name = "PidCat"
path = "src/bin/main.rs"

[dev-dependencies]
build-print = "1.0.1"
